# Protection-Valley

./:  .gitignore  .gitignore  .vercelignore  Cargo.toml  README.md  cargo_check.txt  cargo_err.txt  cargo_err2.txt  check_output.txt  failed_log.txt  failed_log_tail.txt  final_build_log_utf8.txt  full_build_log.txt  full_build_log_utf8.txt  full_log.txt  gh_runs.json  github_failed_log.txt  github_failed_log_utf8.txt  image_fix_build.txt  impeccable.md  output.txt  package-lock.json  package.json  runs.txt  stderr.txt  svelte.config.js  vercel.json  yarn.bat
.github/workflows/: deploy.yml  pages.yml
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/prerendered/pages/: index.html
.svelte-kit/output/server/: index.js  manifest-full.js  manifest.js  remote-entry.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/vercel-tmp/: manifest.js
api/: Cargo.toml  index.rs  main.rs
api/auth/: google.rs  mod.rs
api/handlers/: auth_handlers.rs  ebay_handlers.rs  order_handlers.rs  product_handlers.rs
api/models/: mod.rs
api/services/: auth_service.rs  ebay_service.rs  product_service.rs
api/src/handlers/: auth_handlers.rs  checkout_handlers.rs  mod.rs
api/src/services/: ebay_service.rs
backend/: Cargo.toml  smtp_check_error.txt  smtp_check_error_2.txt  smtp_check_error_3.txt
backend/src/auth/: google_provider.rs  mod.rs
backend/src/handlers/: auth_handlers.rs  checkout_handlers.rs  ebay_handlers.rs  mod.rs  order_handlers.rs  product_handlers.rs  review_handlers.rs
backend/src/models/: mod.rs
backend/src/services/: auth_service.rs  ebay_service.rs  email_service.rs  mod.rs  order_service.rs  product_service.rs  review_service.rs  shipping_service.rs
backend_v2/src/: main.rs
backend_v2/src/handlers/: checkout_handlers.rs  order_handlers.rs
backend_v2/src/services/: auth_service.rs  ebay_service.rs
protection-valley/: build_log.txt  build_log_utf8.txt  dev_server_log.txt  index.html  package-lock.json  package.json  svelte.config.js
protection-valley/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
protection-valley/css/: styles.css
protection-valley/js/: app.js  cart.js  products.js  search.js  ui.js
protection-valley/src/: app.css  app.html
protection-valley/src/lib/: config.ts  stores.ts  types.ts
protection-valley/src/routes/: +layout.svelte
pv_lib/: Cargo.toml
scripts/: assemble-rust.cjs  catalog-rust-fragment.rs  clean-schema.sql  cleaned-products.json  frontend-products.json  generate-catalog.mjs  generate-seed-sql.mjs  generate-variants-csv.mjs  import-products.mjs  keys.tmp  migrate-new.mjs  organized-products.csv  push-seed.mjs  seed.sql  supabase_keys.json
src/: app.css  app.html  lib.rs
src/auth/: mod.rs
src/handlers/: auth_handlers.rs  checkout_handlers.rs
src/lib/: config.ts  constants.ts  data.ts  stores.ts  types.ts
src/lib/components/: CartSidebar.svelte  Footer.svelte  Navbar.svelte  OptimizedImage.svelte  ProductCard.svelte  ReviewForm.svelte  ReviewList.svelte  SearchOverlay.svelte  Toast.svelte
src/lib/pages/: About.svelte  Catalog.svelte  Contact.svelte  Home.svelte  Login.svelte  ProductDetail.svelte
src/models/: mod.rs
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/about/: +page.svelte
src/routes/catalog/: +page.svelte  +page.ts
src/routes/contact/: +page.svelte
src/routes/login/: +page.svelte
src/routes/privacy/: +page.svelte
src/routes/terms/: +page.svelte
src/services/: ebay_service.rs  mod.rs  order_service.rs  product_service.rs
supabase/: config.toml  seed.sql
supabase/migrations/: 20260326034521_create_products.sql  20260326035018_seed_data.sql
toolpro-api/: Cargo.toml
toolpro-api/src/: main.rs
toolpro-api/src/handlers/: mod.rs  product_handlers.rs
toolpro-api/src/services/: ebay_service.rs
toolpro-app/: index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
toolpro-app/src/: App.svelte  app.css
toolpro-app/src/components/: CartSidebar.svelte  Footer.svelte  Layout.svelte  Navbar.svelte  Route.svelte  Router.svelte
toolpro-app/src/lib/: router.ts  storage.ts
toolpro-app/src/pages/: About.svelte  Admin.svelte  Cart.svelte  Checkout.svelte  Contact.svelte  Home.svelte  Login.svelte  NotFound.svelte  Orders.svelte  ProductDetail.svelte  Products.svelte
toolpro-app/src/stores/: auth.ts  cart.ts  products.ts  ui.ts
toolpro-dark/: index.html
toolpro-dist/: index.html
(+87 files in other folders)
