[package]
name = "toolpro-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "toolpro_api"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "api/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
vercel_runtime = "1.1"
oauth2 = "4.4"
anyhow = "1.0"
stripe-rust = "0.33"

[dev-dependencies]
# No direct Actix dependency needed
