[package]
name = "api-function"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "index.rs"

[dependencies]
vercel_runtime = "2.1"
http = "1"
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
urlencoding = "2.1"
backend_v2_lib = { package = "backend_v2_pkg", path = "../backend" }
