[package]
name = "backend_v2_pkg"
version = "0.1.0"
edition = "2021"

[lib]
name = "backend_v2_lib"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
vercel_runtime = "1.1"
oauth2 = { version = "4.4", default-features = false, features = ["rustls-tls"] }
anyhow = "1.0"
async-stripe = { version = "0.41", default-features = false, features = ["runtime-tokio-hyper-rustls"] }
openssl = { version = "0.10", features = ["vendored"] }
